// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cart: internal checkoutWithDeliveryDate should call checkout correctly 1`] = `
Array [
  Array [
    "/jiokart/v1/order/checkout",
    Object {
      "body": Object {
        "action": 1,
        "cartId": 2764873131,
        "customerAddressId": 10160497,
        "deliveryDate": "07-Jan-2020",
        "isAutoSelected": 0,
        "storeId": 111111,
        "timeslot": "",
        "userId": 10005564,
      },
      "headers": Object {
        "StoreId": "111111",
      },
    },
  ],
]
`;

exports[`cart: internal checkoutWithDeliveryDate should call checkout correctly 2`] = `
Object {
  "cartHasBeenUpdated": true,
  "newCart": Object {
    "cartId": "4062847169",
    "couponDiscountAmount": 0,
    "deliveryCharge": 0,
    "discountAmount": 11.399999999999991,
    "itemCount": 5,
    "savedForLater": null,
    "shipments": Array [
      Object {
        "couponDiscountAmount": 0,
        "creationDate": "06-Jan-2020",
        "deliveryCharge": 0,
        "deliveryDate": "",
        "deliveryDay": "Tomorrow",
        "discountAmount": 11.399999999999991,
        "itemCount": 5,
        "products": Array [
          Object {
            "categoryId": "10001310",
            "coupon": undefined,
            "id": "100023724",
            "image": "https://api.reliancesmart.in//images/?name=images/hc1/ha5/8920196907038.jpg",
            "isFc": 1,
            "mrp": 180,
            "name": "Mapro Lemon Ginger Squash",
            "otherImages": Array [
              "https://api.reliancesmart.in//images/?name=images/hc1/ha5/8920196907038.jpg",
              "https://api.reliancesmart.in//images/?name=images/hb7/h92/8920188256286.jpg",
              "https://api.reliancesmart.in//images/?name=images/h52/hd4/8920195661854.jpg",
              "https://api.reliancesmart.in//images/?name=images/h35/h18/8920201035806.jpg",
              "https://api.reliancesmart.in//images/?name=images/hf3/h1e/8920203722782.jpg",
              "https://api.reliancesmart.in//images/?name=images/h60/hb5/9021983817758.jpg",
            ],
            "savingsPercent": 2,
            "selectedQuantity": 1,
            "skuId": "10027751",
            "sp": 176.4,
          },
          Object {
            "categoryId": "10001098",
            "coupon": undefined,
            "id": "100030032",
            "image": "https://api.reliancesmart.in//images/?name=images/h16/h73/9031821754398.jpg",
            "isFc": 1,
            "mrp": 145,
            "name": "Glucon-D Tangy Orange 450 g",
            "otherImages": Array [
              "https://api.reliancesmart.in//images/?name=images/h16/h73/9031821754398.jpg",
              "https://api.reliancesmart.in//images/?name=images/he2/ha9/9031827062814.jpg",
              "https://api.reliancesmart.in//images/?name=images/h05/h13/9031834796062.jpg",
              "https://api.reliancesmart.in//images/?name=images/h02/h68/9031845412894.jpg",
              "https://api.reliancesmart.in//images/?name=images/h29/h08/9031849869342.jpg",
              "https://api.reliancesmart.in//images/?name=images/hcc/ha7/9031864549406.jpg",
              "https://api.reliancesmart.in//images/?name=images/h07/hdb/9031872610334.jpg",
              "https://api.reliancesmart.in//images/?name=images/hbe/h36/9032238104606.jpg",
              "https://api.reliancesmart.in//images/?name=images/h93/h06/9032248328222.jpg",
            ],
            "savingsPercent": 2,
            "selectedQuantity": 1,
            "skuId": "10042508",
            "sp": 142.1,
          },
          Object {
            "categoryId": "10001118",
            "coupon": undefined,
            "id": "100030059",
            "image": "https://api.reliancesmart.in//images/?name=images/hfa/hb3/9037997408286.jpg",
            "isFc": 1,
            "mrp": 135,
            "name": "Horlicks Junior Health Drink Original Flavour",
            "otherImages": Array [
              "https://api.reliancesmart.in//images/?name=images/hfa/hb3/9037997408286.jpg",
              "https://api.reliancesmart.in//images/?name=images/hc7/h0a/9037993476126.jpg",
              "https://api.reliancesmart.in//images/?name=images/h79/h26/9037994524702.jpg",
              "https://api.reliancesmart.in//images/?name=images/he0/h83/9037995507742.jpg",
              "https://api.reliancesmart.in//images/?name=images/h84/h76/9037996490782.jpg",
              "https://api.reliancesmart.in//images/?name=images/h03/h7b/9037997146142.jpg",
              "https://api.reliancesmart.in//images/?name=images/ha8/h13/9037997932574.jpg",
              "https://api.reliancesmart.in//images/?name=images/hd6/hf1/9037998587934.jpg",
            ],
            "savingsPercent": 2,
            "selectedQuantity": 1,
            "skuId": "10035638",
            "sp": 132.3,
          },
          Object {
            "categoryId": "10000994",
            "coupon": undefined,
            "id": "100005584",
            "image": "https://api.reliancesmart.in//images/?name=images/h3d/h6d/8996511612958.jpg",
            "isFc": 1,
            "mrp": 110,
            "name": "Tango Neapolitan Blueberry Chocolate Bar 110 g",
            "otherImages": Array [
              "https://api.reliancesmart.in//images/?name=images/h3d/h6d/8996511612958.jpg",
              "https://api.reliancesmart.in//images/?name=images/h2c/h8c/8996550213662.jpg",
              "https://api.reliancesmart.in//images/?name=images/h06/h6c/8996556963870.jpg",
              "https://api.reliancesmart.in//images/?name=images/hc8/h36/8996584095774.jpg",
            ],
            "savingsPercent": 2,
            "selectedQuantity": 1,
            "skuId": "10006440",
            "sp": 107.8,
          },
          Object {
            "categoryId": "10001870",
            "coupon": undefined,
            "id": "100094190",
            "image": "https://api.reliancesmart.in/",
            "isFc": 1,
            "mrp": 0.01,
            "name": "Welcome Gift For You",
            "otherImages": Array [
              "https://api.reliancesmart.in/",
            ],
            "savingsPercent": 0,
            "selectedQuantity": 1,
            "skuId": "10106839",
            "sp": 0.01,
          },
        ],
        "totalAmount": 558.61,
        "totalPayable": 558.61,
        "type": 0,
      },
    ],
    "totalAmount": 558.61,
    "totalPayableAmount": 558.61,
  },
  "oldCart": Object {
    "cartId": 2764873131,
    "couponDiscountAmount": 20,
    "deliveryCharge": 0,
    "discountAmount": 1.8999999999999986,
    "itemCount": 3,
    "savedForLater": null,
    "shipments": Array [
      Object {
        "couponDiscountAmount": 20,
        "creationDate": "17-Apr-2020",
        "deliveryCharge": 0,
        "deliveryDate": "",
        "deliveryDay": "Tomorrow",
        "discountAmount": 1.8999999999999986,
        "itemCount": 3,
        "products": Array [
          Object {
            "categoryId": 10002340,
            "coupon": null,
            "id": 100024066,
            "image": "https://uat-grocery.ril.com:443//images/?name=images/hc1/hcb/8916991115294.jpg",
            "isFc": 1,
            "mrp": 240,
            "name": "Nivea Smooth Body Milk",
            "otherImages": Array [
              "https://uat-grocery.ril.com:443//images/?name=images/hc1/hcb/8916991115294.jpg",
              "https://uat-grocery.ril.com:443//images/?name=images/h16/h3a/8916957954078.jpg",
              "https://uat-grocery.ril.com:443//images/?name=images/hc8/h0a/8916962082846.jpg",
              "https://uat-grocery.ril.com:443//images/?name=images/hf9/h66/8916966604830.jpg",
              "https://uat-grocery.ril.com:443//images/?name=images/hcf/hfa/8916976173086.jpg",
              "https://uat-grocery.ril.com:443//images/?name=images/h74/he3/8916983447582.jpg",
              "https://uat-grocery.ril.com:443//images/?name=images/hf6/h4a/8916987183134.jpg",
              "https://uat-grocery.ril.com:443//images/?name=images/h56/hce/8917003763742.jpg",
            ],
            "savingsPercent": 0,
            "selectedQuantity": 1,
            "skuId": 10028095,
            "sp": 240,
          },
          Object {
            "categoryId": 10004128,
            "coupon": Object {
              "code": "",
              "description": "http://www.google.com",
              "discountAmount": 10,
              "id": 4170,
              "title": "10 rs off on Catch Whole Jeera 100 g",
            },
            "id": 100008042,
            "image": "https://uat-grocery.ril.com:443//images/?name=images/h1c/h24/8917070282782.jpg",
            "isFc": 1,
            "mrp": 38,
            "name": "Catch Whole Jeera 100 g",
            "otherImages": Array [
              "https://uat-grocery.ril.com:443//images/?name=images/h1c/h24/8917070282782.jpg",
              "https://uat-grocery.ril.com:443//images/?name=images/hc2/h06/8917068120094.jpg",
              "https://uat-grocery.ril.com:443//images/?name=images/hef/h25/8917070151710.jpg",
              "https://uat-grocery.ril.com:443//images/?name=images/h14/hee/8917072052254.jpg",
            ],
            "savingsPercent": 5,
            "selectedQuantity": 1,
            "skuId": 10009279,
            "sp": 36.1,
          },
          Object {
            "categoryId": 10003881,
            "coupon": Object {
              "code": "",
              "description": "Rs 10 off on Whiskas Ocean Fish Adult Cat Food 3kg",
              "discountAmount": 10,
              "id": 4009,
              "title": "Rs 10 off on Whiskas Ocean Fish Adult Cat Food 3kg",
            },
            "id": 100038166,
            "image": "https://uat-grocery.ril.com:443//images/?name=images/h64/he4/8916990001182.jpg",
            "isFc": 1,
            "mrp": 840,
            "name": "Whiskas Ocean Fish Adult Cat Food 3 kg",
            "otherImages": Array [
              "https://uat-grocery.ril.com:443//images/?name=images/h64/he4/8916990001182.jpg",
              "https://uat-grocery.ril.com:443//images/?name=images/h37/hba/8917010710558.jpg",
            ],
            "savingsPercent": 0,
            "selectedQuantity": 1,
            "skuId": 10043518,
            "sp": 840,
          },
        ],
        "totalAmount": 1116.1,
        "totalPayable": 1096.1,
        "type": 1,
      },
    ],
    "totalAmount": 1116.1,
    "totalPayableAmount": 1096.1,
  },
}
`;

exports[`cart: internal getCart should get the cart with the user's default store ID 1`] = `
Object {
  "cartId": 2764873131,
  "couponDiscountAmount": 20,
  "deliveryCharge": 0,
  "discountAmount": 1.8999999999999986,
  "itemCount": 3,
  "savedForLater": null,
  "shipments": Array [
    Object {
      "couponDiscountAmount": 20,
      "creationDate": "17-Apr-2020",
      "deliveryCharge": 0,
      "deliveryDate": "",
      "deliveryDay": "Tomorrow",
      "discountAmount": 1.8999999999999986,
      "itemCount": 3,
      "products": Array [
        Object {
          "categoryId": 10002340,
          "coupon": null,
          "id": 100024066,
          "image": "https://uat-grocery.ril.com:443//images/?name=images/hc1/hcb/8916991115294.jpg",
          "isFc": 1,
          "mrp": 240,
          "name": "Nivea Smooth Body Milk",
          "otherImages": Array [
            "https://uat-grocery.ril.com:443//images/?name=images/hc1/hcb/8916991115294.jpg",
            "https://uat-grocery.ril.com:443//images/?name=images/h16/h3a/8916957954078.jpg",
            "https://uat-grocery.ril.com:443//images/?name=images/hc8/h0a/8916962082846.jpg",
            "https://uat-grocery.ril.com:443//images/?name=images/hf9/h66/8916966604830.jpg",
            "https://uat-grocery.ril.com:443//images/?name=images/hcf/hfa/8916976173086.jpg",
            "https://uat-grocery.ril.com:443//images/?name=images/h74/he3/8916983447582.jpg",
            "https://uat-grocery.ril.com:443//images/?name=images/hf6/h4a/8916987183134.jpg",
            "https://uat-grocery.ril.com:443//images/?name=images/h56/hce/8917003763742.jpg",
          ],
          "savingsPercent": 0,
          "selectedQuantity": 1,
          "skuId": 10028095,
          "sp": 240,
        },
        Object {
          "categoryId": 10004128,
          "coupon": Object {
            "code": "",
            "description": "http://www.google.com",
            "discountAmount": 10,
            "id": 4170,
            "title": "10 rs off on Catch Whole Jeera 100 g",
          },
          "id": 100008042,
          "image": "https://uat-grocery.ril.com:443//images/?name=images/h1c/h24/8917070282782.jpg",
          "isFc": 1,
          "mrp": 38,
          "name": "Catch Whole Jeera 100 g",
          "otherImages": Array [
            "https://uat-grocery.ril.com:443//images/?name=images/h1c/h24/8917070282782.jpg",
            "https://uat-grocery.ril.com:443//images/?name=images/hc2/h06/8917068120094.jpg",
            "https://uat-grocery.ril.com:443//images/?name=images/hef/h25/8917070151710.jpg",
            "https://uat-grocery.ril.com:443//images/?name=images/h14/hee/8917072052254.jpg",
          ],
          "savingsPercent": 5,
          "selectedQuantity": 1,
          "skuId": 10009279,
          "sp": 36.1,
        },
        Object {
          "categoryId": 10003881,
          "coupon": Object {
            "code": "",
            "description": "Rs 10 off on Whiskas Ocean Fish Adult Cat Food 3kg",
            "discountAmount": 10,
            "id": 4009,
            "title": "Rs 10 off on Whiskas Ocean Fish Adult Cat Food 3kg",
          },
          "id": 100038166,
          "image": "https://uat-grocery.ril.com:443//images/?name=images/h64/he4/8916990001182.jpg",
          "isFc": 1,
          "mrp": 840,
          "name": "Whiskas Ocean Fish Adult Cat Food 3 kg",
          "otherImages": Array [
            "https://uat-grocery.ril.com:443//images/?name=images/h64/he4/8916990001182.jpg",
            "https://uat-grocery.ril.com:443//images/?name=images/h37/hba/8917010710558.jpg",
          ],
          "savingsPercent": 0,
          "selectedQuantity": 1,
          "skuId": 10043518,
          "sp": 840,
        },
      ],
      "totalAmount": 1116.1,
      "totalPayable": 1096.1,
      "type": 1,
    },
  ],
  "totalAmount": 1116.1,
  "totalPayableAmount": 1096.1,
}
`;

exports[`cart: internal getDeliveryModes should get the delivery modes for an address ID 1`] = `
Array [
  Object {
    "id": 2,
    "isOpen": true,
    "label": "Tomorrow - 07 January 2020",
    "store": Object {
      "isKdp": false,
      "name": "Gupta Store",
      "storeId": 1000001,
    },
    "value": "07-Jan-2020",
  },
  Object {
    "id": 3,
    "isOpen": true,
    "label": "Wednesday - 08 January 2020",
    "store": Object {
      "isKdp": false,
      "name": "Gupta Store",
      "storeId": 1000001,
    },
    "value": "08-Jan-2020",
  },
  Object {
    "id": 4,
    "isOpen": true,
    "label": "Thursday - 09 January 2020",
    "store": Object {
      "isKdp": false,
      "name": "Gupta Store",
      "storeId": 1000001,
    },
    "value": "09-Jan-2020",
  },
]
`;
